# glfw_cmake_opengl

./: CMakeLists.txt  README.md
src/: main.cpp
src/file_cpp/: Application.cpp
src/file_cpp/Entities/: Camera.cpp  Entity.cpp
src/file_cpp/globals/: variables.cpp
src/file_cpp/graphics/: Framebuffer.cpp  GraphicEngine.cpp  MatrixFunctions.cpp  Mesh.cpp  Mesh3D.cpp  Shader.cpp  Texture.cpp
src/file_cpp/scenes/: SceneManager.cpp  StartingScene.cpp
src/file_h/: Application.h
src/file_h/Entities/: Camera.h  Entity.h
src/file_h/globals/: variables.h
src/file_h/graphics/: Framebuffer.h  GraphicEngine.h  MatrixFunctions.h  Mesh.h  Mesh3D.h  Shader.h  Texture.h
src/file_h/scenes/: Scene.h  SceneManager.h  StartingScene.h
src/shaders/: default.frag  default.vert  screen.vert
